# linear-equation-solvers

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
include/: constants.h  matrix_io.h  simple_iteration.h  thomas_algorithm.h
src/: main.cpp  matrix_io.cpp  simple_iteration.cpp  thomas_algorithm.cpp
